<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/github_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/github_username"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/tbl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_username"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_company"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/detail_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/github_company"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_location"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/github_location"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbl_1"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/tv_followers"
                android:textSize="18sp"
                android:textColor="@color/white">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/tv_following"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/tv_repository"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/github_follower"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/github_following"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/detail_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/github_repository"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </TableRow>

    </TableLayout>



</RelativeLayout>